# gqlite

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  memory.md  technology.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/doc/: design.md
crates/cli/src/: helper.rs  main.rs
crates/cli/tests/: helper_test.rs
crates/core/: Cargo.toml
crates/core/benches/: query_bench.rs
crates/core/doc/: design.md
crates/core/src/: error.rs  lib.rs
crates/core/src/binder/: mod.rs
crates/core/src/catalog/: mod.rs
crates/core/src/executor/: data_chunk.rs  engine.rs  mod.rs  parallel.rs  pipeline.rs
crates/core/src/functions/: aggregate.rs  datetime.rs  mod.rs  registry.rs  scalar.rs
crates/core/src/parser/: ast.rs  mod.rs  parser.rs  token.rs
crates/core/src/planner/: logical.rs  mod.rs  optimizer.rs  physical.rs
crates/core/src/procedure/: graph_algo.rs  mod.rs  registry.rs
crates/core/src/storage/: buffer_manager.rs  column_chunk.rs  compression.rs  csr.rs  format.rs  mod.rs  node_group.rs  pager.rs  table.rs  upgrader.rs
crates/core/src/testing/: fault_injection.rs  mod.rs
crates/core/src/transaction/: mod.rs  wal.rs  write_set.rs
crates/core/src/types/: data_type.rs  graph.rs  mod.rs  value.rs
crates/core/tests/: aggregate_test.rs  all_shortest_paths_test.rs  atomicity_test.rs  basic_test.rs  betweenness_test.rs  binder_test.rs  buffer_manager_test.rs  call_procedure_test.rs  case_expr_test.rs  catalog_test.rs  column_chunk_test.rs  compression_test.rs  crash_recovery_test.rs  csr_test.rs  data_chunk_test.rs  data_type_test.rs  datetime_test.rs  degree_centrality_test.rs  dijkstra_test.rs  dump_restore_test.rs  engine_test.rs  execute_script_test.rs  exists_test.rs  explain_test.rs  explicit_txn_test.rs  fault_injection_test.rs  file_lock_test.rs  format_test.rs  graph_test.rs  in_expr_test.rs  list_comprehension_test.rs  logical_test.rs  lpa_test.rs  math_functions_test.rs  node_group_test.rs  optimizer_test.rs  pager_test.rs  pagerank_test.rs  parallel_test.rs  persistence_test.rs  (+29 more)
crates/gui/: memory.md  package-lock.json  package.json  technology.md  tsconfig.json  vite.config.ts
crates/gui/doc/: design.md
crates/gui/src/: App.svelte  app.css  app.html
crates/gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/gui/src-tauri/src/: lib.rs  main.rs  state.rs
crates/gui/src-tauri/src/commands/: database.rs  graph.rs  mod.rs  query.rs  schema.rs
crates/gui/src/components/: GraphView.svelte  Layout.svelte  QueryEditor.svelte  ResultTable.svelte  Sidebar.svelte  StatusBar.svelte  TableBrowser.svelte
crates/gui/src/lib/: api.ts  i18n.ts  types.ts
crates/gui/src/pages/: Graph.svelte  Query.svelte  Tables.svelte
crates/gui/src/stores/: database.ts
crates/parser/: Cargo.toml
crates/parser/doc/: design.md
crates/parser/fuzz/: Cargo.toml
crates/parser/fuzz/fuzz_targets/: fuzz_parse_all.rs  fuzz_parse_query.rs
crates/parser/src/: ast.rs  data_type.rs  lib.rs  parser.rs  token.rs
crates/parser/tests/: data_type_test.rs  parser_test.rs  token_test.rs
examples/: basic.rs
prompt/: 01-data-model-and-schema.md  02-storage-engine.md  03-query-language-cypher.md  04-query-processing.md  05-indexing.md  06-transactions-and-concurrency.md  07-data-import-export.md  08-extensions-and-api.md  09-performance-optimization.md  10-graph-algorithms-and-advanced-queries.md
scripts/: check.sh
