[workspace]
members = ["crates/core", "crates/cli", "crates/parser", "crates/gui/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
repository = "https://github.com/coderjinhui/gqlite"

[workspace.dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
uuid = { version = "1", features = ["v4"] }
bitvec = { version = "1", features = ["serde"] }
logos = "0.14"
ahash = "0.8"
parking_lot = "0.12"
crc32fast = "1"
rayon = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
gqlite-core = { path = "crates/core" }
gqlite-parser = { path = "crates/parser" }
