[package]
name = "gqlite-cli"
version = "0.1.0"
description = "Interactive CLI / REPL for gqlite"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "gqlite"
path = "src/main.rs"

[dependencies]
gqlite-core = { workspace = true }
rustyline = { version = "14", features = ["derive"] }
