[package]
name = "gqlite-core"
version = "0.1.0-beta.1"
description = "Core library for gqlite — a lightweight embeddable graph database"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
gqlite-parser = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }
bitvec = { workspace = true }
ahash = { workspace = true }
parking_lot = { workspace = true }
crc32fast = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
fs2 = { workspace = true }
log = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "query_bench"
harness = false
