[package]
name = "gqlite-gui"
version = "0.1.0"
description = "gqlite desktop GUI management tool"
edition = "2021"
default-run = "gqlite-gui"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
gqlite-core = { path = "../../core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
